...
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MonashSport" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="raw_1522206791" translatesAutoresizingMaskIntoConstraints="NO" id="nfX-rz-T7i">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            </imageView>
...
                            <constraint firstItem="B2B-NI-4W6" firstAttribute="trailing" secondItem="Fte-sl-boU" secondAttribute="trailing" id="Syx-C2-cGa"/>
                            <constraint firstItem="1k9-d8-P2b" firstAttribute="top" secondItem="B2B-NI-4W6" secondAttribute="top" id="fYO-05-zz3"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="B2B-NI-4W6"/>
                    </view>
                    <navigationItem key="navigationItem" title="Reports" id="GOd-en-9TE">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="icons8-new-post-filled-100" id="yGl-c1-lbd">
                            <connections>
                                <segue destination="NlG-NO-HBF" kind="presentation" identifier="ReportsToMeSegue" id="cYQ-ty-7fy"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="icons8-settings-filled-100 copy" id="vOk-yJ-wA9">
                            <connections>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="raw_1522064396" translatesAutoresizingMaskIntoConstraints="NO" id="cRt-6q-m4a">
                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                            </imageView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tht-au-lXT">
                                <rect key="frame" x="0.0" y="67" width="375" height="551"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cals" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeF-Jz-0E8">
                                        <rect key="frame" x="21" y="29" width="43" height="27"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="403" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IDh-F0-fze">
...
                            <constraint firstItem="tht-au-lXT" firstAttribute="leading" secondItem="cRt-6q-m4a" secondAttribute="leading" id="a9E-NW-5Z9"/>
                            <constraint firstItem="tht-au-lXT" firstAttribute="bottom" secondItem="dWG-ph-F3w" secondAttribute="bottom" id="eZ6-ev-nAc"/>
                            <constraint firstItem="tht-au-lXT" firstAttribute="trailing" secondItem="cRt-6q-m4a" secondAttribute="trailing" id="o6T-LH-3Oe"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="dWG-ph-F3w"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="cXb-9E-wYq">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="icons8-new-post-filled-100" id="6r6-yI-x6c">
                            <connections>
                                <segue destination="NlG-NO-HBF" kind="presentation" id="vUZ-GY-XmT"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="icons8-settings-filled-100 copy" id="Ple-W2-MGf">
...
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="10"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Swu-GK-OQD">
                                        <rect key="frame" x="68" y="13" width="57" height="21"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fR2-pl-Vg9">
...
